# computer-graphics-bounding-volume-hierarchy

./: CMakeLists.txt  README.md  distances.cpp  intersections.cpp  rays.cpp
.github/workflows/: cmake.yml
